clang/test/CIR/IR/invalid-addrspace.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

// -----

!u64i = !cir.int<u, 64>
// expected-error@below {{expected address space keyword}}
// expected-error@below {{expected keyword for address space kind}}
cir.func @address_space1(%p : !cir.ptr<!u64i, addrspace()>) {
  cir.return
}

// -----

!u64i = !cir.int<u, 64>
// expected-error@below {{expected target address space value}}
// expected-error@below {{expected integer value}}
cir.func @address_space2(%p : !cir.ptr<!u64i, addrspace(target<>)>) {
  cir.return
}

// -----

!u64i = !cir.int<u, 64>
// expected-error@below {{expected '<'}}
cir.func @address_space3(%p : !cir.ptr<!u64i, addrspace(target)>) {
  cir.return
}

// -----

!u64i = !cir.int<u, 64>
// expected-error@below {{expected one of [default, offload_private, offload_local, offload_global, offload_constant, offload_generic, target] for address space kind, got: foobar}}
// expected-error@below {{expected address space keyword}}
cir.func @address_space4(%p : !cir.ptr<!u64i, addrspace(foobar)>) {
  cir.return
}
